--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - "volumes/caddy/config:/etc/caddy/config"
-      - "volumes/caddy/certs:/etc/caddy/certs"
+      - "./volumes/caddy/config:/etc/caddy/config"
+      - "./volumes/caddy/certs:/etc/caddy/certs"
     environment:
       - CADDYPATH=/etc/caddy/certs
     networks:
@@ -27,8 +27,8 @@ services:
     image: jwilder/docker-gen:0.7.3
     volumes:
       - "/var/run/docker.sock:/tmp/docker.sock:ro"
-      - "volumes/docker-gen/templates:/etc/docker-gen/templates:ro"
-      - "volumes/docker-gen/config:/etc/docker-gen/config:ro"
+      - "./volumes/docker-gen/templates:/etc/docker-gen/templates:ro"
+      - "./volumes/docker-gen/config:/etc/docker-gen/config:ro"
     volumes_from:
       - caddy
     environment:
